<resources>
    <string name="app_name">Vinyl\nCountdown</string>
    <string name="invalid_reg">Registration not successful</string>
    <string name="invalid_pas">Password must be 6 characters</string>
    <string name="invalid_login_pas">Enter a valid password</string>
    <string name="invalid_login">Password or email is incorrect</string>
    <string name="invalid_login_mail">Enter a valid email address</string>
    <string name="valid_reg">Thanks for registering!</string>
    <string name="invalid_con">Connection invalid</string>
    <string name="inv_username">Username must be at least 4 characters</string>
    <string name="inv_pass_num">Password must at least contain 1 number</string>
    <string name="inv_pass_len">Password must be at least 4 characters</string>
    <string name="inv_pass_comp">Passwords don\'t match</string>
    <string name="inv_email">Invalid email address</string>
    <string name="verify_mail">Please verify your account through your email.</string>
    <string name="inv_check">Unable to check username availability</string>
    <string name="inv_usertaken">Username is taken</string>
    <string name="inv_con">No connection</string>
    <string name="inv_emailtaken">Email address is taken</string>
    <string name="title_activity_nav_activity">Nav_activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_nav">MainActivityNav</string>
    <string name="bidding">Bidding from</string>
    <string name="trade">Trade</string>
    <string name="price">Price</string>
    <string name="confirm_offer">Confirm offer</string>
    <string name="double_bid">You already placed a bid!</string>
    <string name="low_bid">Insufficient bid!</string>
    <string name="success_message">Succesfully sent a message to the record owner!</string>
    <string name="record_unselect">Please select a record first!</string>
    <string name="no_market_results">Nothing found in the marketplace</string>
    <string name="dialog_market_search">"Looking for offers of "</string>
    <string name="collection">Collection</string>
    <string name="wishlist">Wishlist</string>
    <string name="no_search_results">No search results</string>
    <string name="acc_collection">Added to collection</string>
    <string name="confirm_add">Confirm addition</string>
    <string name="confirm_add_text">Do you want to add this record to your collection?</string>
    <string name="confirm_wish_text">Do you want to add this record to your wishlist?</string>
    <string name="wish_add">Added to wishlist</string>
    <string name="info_menu_text">Press the + button to open the menu and navigate between activities. From here you can navigate to the many functions this app has to offer.</string>
    <string name="buysell_info_text">Buying and selling allows you to search the market for your favorite records! And sell your unwanted records to others! Browsing is as easy as can be!</string>
    <string name="colwish_info_text">Maintain your personal collection and your wishlist here. Hold an item to delete it and click it once from collection to start selling that item (or just view more info about it). From wishlist a single click sends you to the marketplace where you will get any results if they are available.</string>
    <string name="profile_info_text">Edit your username, view your email adress and have an overview of all your personal sales here!</string>
    <string name="inbox_info_text">Here you can view all replies to your offers and respond to them. Any replies you get from your messages to others can also be viewed here.</string>
    <string name="no_messages">No messages yet</string>
    <string name="reject_text">If you reject the offer, your record will stay in the marketplace and the receiver will be made aware!</string>
    <string name="accept_text">If you accept the offer, your record will be removed from the marketplace and the receiver will be made aware!</string>
    <string name="confirm_message">Confirming message</string>
    <string name="tradingtext">Trading</string>
    <string name="pricetext">Price: €</string>
    <string name="biddingtext">Asking price: €</string>
    <string name="offer_success">Your offer has been created</string>
    <string name="confirm_sale">Confirm sale</string>
    <string name="inv_price">Invalid price!</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="condition">Condition:</string>
    <string name="search">Search...</string>
    <string name="pricesale">Price:</string>
    <string name="eurosign">€</string>
    <string name="asking_price">Asking price:</string>
    <string name="current_bid">Current Bid:</string>
    <string name="your_bid">Your Bid:</string>
    <string name="_0_00">0.00</string>
    <string name="vinyl_countdown">Vinyl Countdown</string>
    <string name="marketplace">Marketplace</string>
    <string name="buttonmain">+</string>
    <string name="add">add</string>
    <string name="inbox">inbox</string>
    <string name="message">Message</string>
    <string name="subject">Subject:</string>
    <string name="sender">Sender:</string>
    <string name="content">Content:</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="you_already_replied_to_this_message">You already replied to this message</string>
    <string name="info">Info</string>
    <string name="buying_and_selling">Buying and selling</string>
    <string name="profile">Profile</string>
    <string name="collection_and_wishlist">Collection and Wishlist</string>
    <string name="got_it">Got it!</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="e_mail">E-Mail</string>
    <string name="welcome">Welcome,</string>
    <string name="username">Username:</string>
    <string name="e_mail_profile">E-mail:</string>
    <string name="your_sales">Your sales:</string>
    <string name="profile_title">Profile</string>
    <string name="tracks">Tracks:</string>
    <string name="back">Back</string>
    <string name="edit_your_username">Edit your username:</string>
    <string name="save">save</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="username_reg">Username</string>
    <string name="password_reg">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="sale_type">Sale type:</string>
    <string name="condition_sale">Condition</string>
    <string name="price_sale">Price: €</string>
    <string name="about_your_record_others_can_read_this">About your record (others can read this):</string>
    <string name="artist">Artist</string>
    <string name="selling_records">Selling records</string>
    <string name="more">more</string>
    <string name="sold_by">Sold by:</string>
    <string name="duration">Duration:</string>
</resources>
