<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="nl.mprog.rens.vinylcountdown.Activities.InfoActivity">

    <nl.mprog.rens.vinylcountdown.AdapterClasses.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:paddingBottom="15dp"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/customTextInfo"/>

    <TextView
        android:text="@string/info_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_below="@+id/customTextInfo"
        android:textSize="13sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView14" />

    <nl.mprog.rens.vinylcountdown.AdapterClasses.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:text="@string/buying_and_selling"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true"
        android:id="@+id/customTextView" />

    <TextView
        android:text="@string/buysell_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customTextView"
        android:textSize="13sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView22" />

    <nl.mprog.rens.vinylcountdown.AdapterClasses.CustomTextView
        android:layout_width="match_parent"
        android:text="@string/inbox"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView22"
        android:paddingTop="7dp"
        android:layout_alignParentStart="true"
        android:id="@+id/customTextView2" />

    <TextView
        android:text="@string/inbox_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customTextView2"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:id="@+id/textView24" />

    <nl.mprog.rens.vinylcountdown.AdapterClasses.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:paddingTop="7dp"
        android:layout_below="@+id/textView24"
        android:layout_alignParentStart="true"
        android:id="@+id/customTextView3" />

    <TextView
        android:text="@string/profile_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customTextView3"
        android:textSize="13sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView27" />

    <nl.mprog.rens.vinylcountdown.AdapterClasses.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collection_and_wishlist"
        android:paddingTop="7dp"
        android:id="@+id/customTextView4"
        android:layout_below="@+id/textView27"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/colwish_info_text"
        android:layout_width="wrap_content"
        android:textSize="13sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customTextView4"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView28" />

    <Button
        android:text="@string/got_it"
        android:background="@drawable/button_background"
        android:onClick="backToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:layout_below="@+id/textView28"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
